tests/invalid/test3.var
var x = 3;

// this is a comment
/*this is comement*/

if (x > 1) {
    x = x + 1;